--- a/preamble.tex
+++ b/preamble.tex
@@ -16,6 +16,7 @@
 \usepackage{quiver}
 \usepackage{xcolor}
 \usepackage[nottoc, numbib]{tocbibind}
+\usepackage{pigpen}
 
 
 %\usepackage{pdfsync}
@@ -96,3 +97,6 @@
 
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
 \newcommand{\unsure}[1]{\textcolor{blue}{#1}}
+
+\newcommand{\po}{\ar@{}[dr]|{\text{\pigpenfont R}}}
+\newcommand{\pb}{\ar@{}[dr]|{\text{\pigpenfont J}}}
